[package]
name = "grindurus_grinder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-macros = "0.8"
ic-cdk-timers = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
ic-web3 = "0.1"
ethereum-types = "0.14"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
ic-stable-structures = "0.5"
